tests/bad/value_enums/wrong_type_in_field.oc
/// fail: Couldn't find this identifier: Baz

enum Foo {
    Foo(i32)
    Bar(Baz)
}

def main() {
    let x: i32
}
